--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI:mongodb+srv://zoomla:zoomla@cluster0.cofqy.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI:mongodb+srv://zoomla:zoomla@cluster0.hgayvyf.mongodb.net/?retryWrites=true&w=majority
 PORT:1337
